# tool-segmenter

./: .env.example  .gitignore  CODEX.md  README.md  pyproject.toml
app/: __init__.py  calibration.py  image_views.py  main.py  postprocess.py  prompts.py  schemas.py  settings.py  visualization.py
app/backends/: __init__.py  base.py  mock_backend.py  opencv_backend.py  roboflow_sam3_backend.py  sam3_mlx_backend.py  sam3_multiview_backend.py
app/cli/: __init__.py  export_multiview_regions.py  segment_calibrated_image.py  segment_image.py
docs/: architecture.md  pipeline.md
tests/: test_api.py  test_calibration.py  test_dedup.py  test_image_views.py  test_opencv_backend.py  test_postprocess.py  test_schemas.py
